--- a/package.json
+++ b/package.json
@@ -20,21 +20,23 @@
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^9.2.1",
     "morgan": "^1.10.0",
     "winston": "^3.6.0",
     "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
-    "prisma": "^3.10.0"
+    "prisma": "^3.10.0",
+    "supertest": "^6.2.2"
   },
   "scripts": {
     "start": "node src/index.js",
     "dev": "cross-env NODE_ENV=development nodemon src/index.js",
-    "test" : "cross-env NODE_ENV=test mocha"
+    "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest"
   }
 }
